--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --check . && eslint . && npx tsc --noEmit",
+    "lint:fix": "prettier --write . && eslint --fix . && npx tsc --noEmit",
+    "prepare": "husky install",
+    "check-ts": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +18,18 @@
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
+    "prettier": "^3.1.0"
+  },
+  "lint-staged": {
+    "*.(js,ts)": [
+      "prettier --write .",
+      "eslint --cache --fix  .",
+      "npx tsc --noEmit"
+    ],
+    "*.{css,md,yml}": "prettier --write ."
   }
 }
