--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "lint": "prettier --check . && eslint . && npx tsc --noEmit",
     "lint:fix": "prettier --write . && eslint --fix . && npx tsc --noEmit",
     "prepare": "husky install",
