--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\"",
+    "test": "jest",
     "lint": "prettier --check . && eslint . && npx tsc --noEmit",
     "lint:fix": "prettier --write . && eslint --fix . && npx tsc --noEmit",
     "prepare": "husky install",
@@ -14,27 +14,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/preset-env": "^7.23.3",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.39",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2"
   },
   "lint-staged": {
     "*.(js,ts)": [
-      "prettier --write .",
       "eslint --cache --fix  .",
+      "prettier --write",
       "npx tsc --noEmit"
     ],
-    "*.{css,md,yml}": "prettier --write ."
+    "*.{css,scss,md,yml, json, html}": "prettier . --write"
   },
   "dependencies": {
     "react": "^18.2.0"
