--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "prettier --check . && eslint . && npx tsc --noEmit",
-    "lint:fix": "prettier --write . && eslint --fix . && npx tsc --noEmit",
+    "lint": "prettier --check . && eslint . && stylelint \"**/*.scss\" && npx tsc --noEmi",
+    "lint:fix": "prettier --write . && eslint . --fix  && stylelint \"**/*.scss\" --fix && npx tsc --noEmit",
     "prepare": "husky install",
     "check-ts": "tsc --noEmit"
   },
@@ -29,6 +29,12 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard": "^35.0.0",
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.0.0",
     "typescript": "^5.3.2"
   },
   "lint-staged": {
@@ -37,7 +43,8 @@
       "prettier --write",
       "npx tsc --noEmit"
     ],
-    "*.{css,scss,md,yml, json, html}": "prettier . --write"
+    "*.{css,scss,md,yml, json, html}": "prettier . --write",
+    "*.{css, scss}": "stylelint --fix"
   },
   "dependencies": {
     "react": "^18.2.0"
