--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "prettier --check . && eslint . && stylelint \"**/*.scss\" && npx tsc --noEmi",
     "lint:fix": "prettier --write . && eslint . --fix  && stylelint \"**/*.scss\" --fix && npx tsc --noEmit",
     "prepare": "husky install",
-    "check-ts": "tsc --noEmit"
+    "check-ts": "tsc --noEmit",
+    "start": "webpack serve --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch",
+    "ncu": "npm-check-updates --interactive --format group --doctor"
   },
   "keywords": [],
   "author": "",
@@ -21,21 +26,31 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "favicons-webpack-plugin": "^6.0.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.4",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "stylelint": "^16.0.2",
     "stylelint-config-standard": "^35.0.0",
     "stylelint-prettier": "^5.0.0",
     "stylelint-scss": "^6.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "lint-staged": {
     "*.(js,ts)": [
