--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.32",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.3.0",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
