--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-loader": "^3.3.3",
     "stylelint": "^16.0.2",
     "stylelint-config-standard": "^35.0.0",
+    "stylelint-config-standard-scss": "^12.0.0",
     "stylelint-prettier": "^5.0.0",
     "stylelint-scss": "^6.0.0",
     "typescript": "^5.3.2",
