--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "stylelint-config-standard-scss": "^12.0.0",
     "stylelint-prettier": "^5.0.0",
     "stylelint-scss": "^6.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
